--- a/demotests/build.gradle
+++ b/demotests/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.15'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id 'io.qameta.allure' version '2.8.1'
+	
 }
 
 group = 'br.com.santocodigo'
@@ -10,6 +12,20 @@ version = '0.0.1-SNAPSHOT'
 java {
 	sourceCompatibility = '1.8'
 }
+
+configurations {
+   testCompile
+}
+
+compileJava { options.encoding = "ISO-8859-1" }
+compileTestJava { options.encoding = "ISO-8859-1" }
+
+allure {
+    version = '2.14.0'
+    //resultsDir = file(project.projectDir.toString()+'/reports/allure-results')
+    
+}
+
 
 repositories {
 	mavenCentral()
@@ -22,8 +38,18 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+    implementation('io.qameta.allure:allure-junit5:2.14.0')
+	
 }
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
+   systemProperty("allure.results.directory", project.buildDir.toString() + "/maralaallure-results")
+	
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
