--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -14,13 +14,13 @@ jobs:
           distribution: 'adopt'
 
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x demotests/gradlew
 
       - name: Unit Tests
-        run: ./gradlew test -x integrationTest
+        run: cd demotests && ./gradlew test -x integrationTest
 
       - name: Integration Tests
-        run: ./gradlew integrationTest
+        run: cd demotests && ./gradlew integrationTest
 
       - name: Get Allure history
         uses: actions/checkout@v2
