--- a/.github/workflows/build-report.yml
+++ b/.github/workflows/build-report.yml
@@ -1,23 +1,23 @@
-name: allure-repport
+name: build-repport
 
-on: [ push ]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: "8"
+          distribution: "adopt"
 
       - name: Grant execute permission for gradlew
         run: chmod +x demotests/gradlew
 
       - name: Tests
-        run: cd demotests && ./gradlew clean test 
+        run: cd demotests && ./gradlew clean test
 
       - name: Get Allure history
         uses: actions/checkout@v2
