--- a/demotests/build.gradle
+++ b/demotests/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'jacoco'
 	id 'org.springframework.boot' version '2.7.15'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'io.qameta.allure' version '2.8.1'
@@ -33,20 +34,19 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('io.qameta.allure:allure-junit5:2.14.0')
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
-	
-    implementation('io.qameta.allure:allure-junit5:2.14.0')
-	
 }
 
 
 
 tasks.named('test') {
 	useJUnitPlatform()
-   systemProperty("allure.results.directory", project.buildDir.toString() + "/maralaallure-results")
+   	systemProperty("allure.results.directory", project.buildDir.toString() + "/maralaallure-results")
 	
     testLogging {
         events "passed", "skipped", "failed"
