--- a/.github/workflows/build-report.yml
+++ b/.github/workflows/build-report.yml
@@ -17,7 +17,7 @@ jobs:
         run: chmod +x demotests/gradlew
 
       - name: Tests
-        run: cd demotests && ./gradlew clean test
+        run: cd demotests && ./gradlew clean build
 
       - name: Get Allure history
         uses: actions/checkout@v2
@@ -36,6 +36,12 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
+
+      - name: Generate JaCoCo Badge
+        uses: cicirello/jacoco-badge-generator@v2
+        with:
+          generate-branches-badge: true
+          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
 
       - name: Deploy report to Github Pages
         if: always()
