--- a/demotests/build.gradle
+++ b/demotests/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 }
 
+build.dependsOn jacocoTestReport
 
 
 tasks.named('test') {
@@ -50,5 +51,13 @@ tasks.named('test') {
 	
     testLogging {
         events "passed", "skipped", "failed"
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = true
+        html.required = true
     }
 }
