[PRESENTATION] - Add User tests

--- a/demotests/build.gradle
+++ b/demotests/build.gradle
@@ -37,7 +37,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation('io.qameta.allure:allure-junit5:2.14.0')
+    implementation 'io.qameta.allure:allure-junit5:2.14.0'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
@@ -50,7 +50,6 @@ build.dependsOn jacocoTestReport
 
 tasks.named('test') {
 	useJUnitPlatform()
-   	systemProperty("allure.results.directory", project.buildDir.toString() + "/maralaallure-results")
 	
     testLogging {
         events "passed", "skipped", "failed"
