[PRESENTATION] - Alter userService and add tests.

--- a/demotests/build.gradle
+++ b/demotests/build.gradle
@@ -61,4 +61,12 @@ jacocoTestReport {
         csv.required = true
         html.required = true
     }
+    
+     afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                "br/com/santocodigo/demotests/model/*"
+            ])
+        }))
+    }
 }
