[Presentation] - Try archive build in workflow

--- a/.github/workflows/build-report.yml
+++ b/.github/workflows/build-report.yml
@@ -18,6 +18,10 @@ jobs:
 
       - name: Tests
         run: cd demotests && ./gradlew clean build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Package
+          path: build
 
       - name: Get Allure history
         uses: actions/checkout@v2
