--- a/demotests/build.gradle
+++ b/demotests/build.gradle
@@ -26,10 +26,6 @@ allure {
     resultsDir = file(project.projectDir.toString()+'/reports/allure-results')
 }
 
-jacoco{
-    reportsDirectory = file(project.projectDir.toString()+'/reports/jacoco')
-}
-
 repositories {
 	mavenCentral()
 }
@@ -47,13 +43,15 @@ dependencies {
 
 build.dependsOn jacocoTestReport
 
-tasks.named('test') {
+test {
+
 	useJUnitPlatform()
 	
     testLogging {
         events "passed", "skipped", "failed"
     }
 }
+
 
 jacocoTestReport {
     reports {
